# ApprovalTests.cpp.Qt

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  mdsnippets.json  mlc_config.json  run_markdown_templates.sh  to_do.txt
.github/workflows/: github_actions_build.yml
ApprovalTestsQt/: ApprovalTestsQt.hpp  ApprovalTestsQtVersion.h  ApprovalsQt.h  CMakeLists.txt  EmptyFileCreatorByType.h  SafeQTestMacros.h
ApprovalTestsQt/comparators/: QImageApprovalComparator.h
ApprovalTestsQt/integrations/: LoadApprovals.h
ApprovalTestsQt/integrations/catch/: Catch2QtApprovals.h  Catch2QtStringMaker.h  LoadApprovals.h
ApprovalTestsQt/writers/: QImageApprovalWriter.h  QTableViewWriter.h  QTableWidgetWriter.h
doc/: Features.md
doc/mdsource/: Features.source.md
examples/: CMakeLists.txt
examples/accessing_widgets/: CMakeLists.txt  duplicate.sh  samplewidgets.h  samplewidgets.ui
examples/accessing_widgets/accessing_widgets_gui/: CMakeLists.txt  main.cpp
examples/accessing_widgets/accessing_widgets_lib/: CMakeLists.txt  samplewidgets.cpp  samplewidgets.h  samplewidgets.ui  samplewidgets00.cpp  samplewidgets00.h  samplewidgets00_no_accessor.cpp  samplewidgets00_no_accessor.h  samplewidgets01.cpp  samplewidgets01.h  samplewidgets01_public_accessor.cpp  samplewidgets01_public_accessor.h  samplewidgets02.cpp  samplewidgets02.h  samplewidgets02_protected_accessor.cpp  samplewidgets02_protected_accessor.h  samplewidgets03.cpp  samplewidgets03.h  samplewidgets03_private_accessor.cpp  samplewidgets03_private_accessor.h  samplewidgets03_private_accessort.cpp  samplewidgets03_private_accessort.h  samplewidgets04.cpp  samplewidgets04.h
examples/accessing_widgets/accessing_widgets_tests/: CMakeLists.txt  main.cpp  samplewidgets00_tests.cpp  samplewidgets00_tests_no_fixture.cpp  samplewidgets00_tests_with_fixture.cpp  samplewidgets01_tests.cpp  samplewidgets01_tests_with_fixture.cpp  samplewidgets02_tests.cpp  samplewidgets02_tests_inheritance.cpp  samplewidgets03_tests.cpp  samplewidgets03_tests_inheritance.cpp  samplewidgets03_tests_non_inheritance.cpp  samplewidgets04_tests.cpp  samplewidgets_tests.cpp
examples/vanilla_catch_qt_tests/: CMakeLists.txt  TestNumbersInCatch2.cpp  TestQStringInCatch2.cpp  main.cpp
examples/vanilla_qt_tests/: CMakeLists.txt  TestQString.cpp
examples/vanilla_qt_tests/TestNumbers/: CMakeLists.txt  TestNumbers.cpp
examples/vanilla_qt_tests/TestQString/: CMakeLists.txt  TestQString.cpp
mdsource/: README.source.md
scripts/: reformat_code.sh
tests/: CMakeLists.txt
tests/Catch2_Tests/: ApprovalTestsQt.hpp  ApprovalsQtTests.cpp  CMakeLists.txt  QtMacroTests.cpp  main.cpp
tests/Catch2_Tests/approval_tests/: ApprovalsQtTests.It_approves_a_QTableWidget.approved.tsv
tests/Catch2_Tests/integrations/catch/: Catch2QtApprovalsTests.cpp  Catch2QtStringMakerTests.cpp
tests/Catch2_Tests/writers/: QImageApprovalWriterTests.cpp
tests/DocTest_Tests/: CMakeLists.txt  main.cpp
